==> 1243654/PnP-Link-UAV-Mount-System/assets/OSD/AT7456E/AT7456E OSD模块资料/C语言SPI驱动代码（rp2040）/OSD.c <==
#include "OSD.h"
#include <stdio.h>
#include <stdbool.h>
#include <string.h>
#include <math.h>
#include "pico/stdlib.h"
#include "hardware/gpio.h"
#include "hardware/spi.h"
#include "config_param.h"
#define OSD_SPI_PORT spi0
#define READ_BIT 0x80
#define SPI0_PIN_MISO 4 //MISO Pin
#define SPI0_PIN_MOSI 3 //MOSI Pin
#define SPI0_PIN_SCK 2 //Pin
#define SPI0_PIN_CS 5 //Pin

static inline void CS0() {
    asm volatile("nop \n nop \n nop");
    gpio_put(SPI0_PIN_CS, 0);  // Active low
    asm volatile("nop \n nop \n nop");
}

static inline void CS1() {
    asm volatile("nop \n nop \n nop");
    gpio_put(SPI0_PIN_CS, 1);
    asm volatile("nop \n nop \n nop");
}

void at7456_write_addr_data(uint8_t addr, uint8_t dat){
    // Two bytes. First byte register, second byte data
    uint8_t buf2[2];
    //buf2[0] = addr;
    buf2[0] = addr & 0x7f;// remove read bit as this is a write
    buf2[1] = dat;

    CS0();  // Active low
    spi_write_blocking(OSD_SPI_PORT, buf2, 2); //写入数据
    CS1();

    //return buf2[0]; //根据NRF手册，SPI写操作，第1字节返回的是状态寄存器位

}

uint8_t at7456_init(void){
	uint8_t k;

	spi0_init();
	//sleep_ms(50); //上电复位后要等待50ms

	uint8_t AT7456_Version = at7456_check();
    if(AT7456_Version == 0)  printf("AT7456 is new version.\n");
    else if(AT7456_Version == 1) printf("AT7456 is old version.\n");
    else if(AT7456_Version == 2) {
		printf("AT7456 error,exit at7456_init()! \n");
		return 1;
	}
	//设置 VM0 视频模式寄存器
	//bit6:视频模式选择	0 = NTSC	1 = PAL
	//内部同步分离、PAL制式、自动sync、OSD不使能、软件复位
	at7456_write_addr_data(VM0, 0x42);//0100 0010
	sleep_us(40);//软件复位延时
	//sleep_ms(1);
	k = at7456_read_addr_data(VM0);
	at7456_write_addr_data(VM0, k|PAL);//软件复位后必须重新设置视频制式，上边第一行其实不管用。。。

	//通过VM1 设置亮度
	k = at7456_read_addr_data(VM1);
	at7456_write_addr_data(VM1, (k&0x8F)|BACKGND_0);//bit654 先清零 0b1000 1111 再或 

	//DMM 显示存储器 模式寄存器
	//bit6 默认0 16位操作模式
	//写入DMM[6]＝1，选择 8 位工作模式。
	//at7456_write_addr_data(DMM, 0x40);//0100 0000

	//设置DMM[5]LBC为1，适用于16位模式下的通过VM1调节字符亮度的功能
	//不行，这样会导致字符有黑底，透明模式，必须为0
	//k = at7456_read_addr_data(DMM);
	//at7456_write_addr_data(DMM, k|(1 << 5));	

	//OSDBL黑电平寄存器
	//写入 OSDBL[4]＝0，使能自动 OSD 黑电平控制。
	k = at7456_read_addr_data(OSDBL);
	at7456_write_addr_data(OSDBL, k & ~(1 << 4));		

	at7456_clearSRAM();

	printf("at7456_init Ok!\n");
	return 0;
}

void at7456_clearSRAM(void){
   uint8_t k=0;
   //DMM 显示存储器模式寄存器
   k = at7456_read_addr_data(DMM);
   at7456_write_addr_data(DMM,k|(1 << 2));  //0000 0100,bit[2]置1,fill all display memories with zeros
   sleep_us(40); // 清除缓存后至少为40us
}

void at7456_OSD_on(void){
	uint8_t k;

	k = at7456_read_addr_data(VM0);
	at7456_write_addr_data(VM0, k | (1 << 3));		// VM0[3]=1，打开OSD字符显示 Enable Display of OSD Image
	sleep_us(10);//打开字符显示后延时10us
}

void at7456_OSD_off(void){
	uint8_t k;

	k = at7456_read_addr_data(VM0);
	at7456_write_addr_data(VM0, k & ~(1 << 3));		// VM0[3]=0，禁止OSD
	sleep_us(30);//关闭字符显示后延时30us
}
