==> kekege123/ESP32-racing-drone-flight-control-firmware/fly2_dshot_for_esp32UBoard/lib/OSD_ESP32/OSD_ESP32.cpp <==
#include "OSD_ESP32.h"

static inline void CS0() {
    digitalWrite(AT7456_CS, LOW);
    delayMicroseconds(1);
}

static inline void CS1() {
    delayMicroseconds(1);
    digitalWrite(AT7456_CS, HIGH);
}

void MyAT7456::at7456_write_addr_data(uint8_t addr, uint8_t dat) {
    CS0();
	// digitalWrite(AT7456_CS, LOW);
    _spi.transfer(addr & 0x7F); // 移除读标志位
    _spi.transfer(dat);
	// digitalWrite(AT7456_CS, HIGH);
    CS1();
}

uint8_t MyAT7456::at7456_init(void) {
    // spi0_init();
    // delay(50); // 上电复位后等待
    uint8_t version = at7456_check_version();
    if(version == 0) Serial.print("初始化失败");//return 1; // 初始化失败
    // 直接配置，不进行版本检查（无 MISO）
    at7456_write_addr_data(VM0, 0x42); // NTSC, 自动同步
    // delay(1);
	/*
    at7456_write_addr_data(VM0, 0x48); // PAL 制式
    */
   	at7456_write_addr_data(VM0, 0b01000001); // 启用OSD，NTSC内同步模式
	// 方案B：如果您知道/确定摄像头是PAL制式
    // at7456_write_addr_data(VM0, 0b01000010); // 启用OSD，PAL内同步模式

	
   	// 等待视频信号，最多尝试10次
    // uint8_t retries = 0;
    // bool videoDetected = false;
    
    // while (retries < 10) {
    //     uint8_t stat = at7456_read_addr(STAT);
        
    //     // 检查视频信号
    //     if (stat & (PAL_DETECT | NTSC_DETECT)) {
    //         videoDetected = true;
    //         break;
    //     }
        
    //     // delay(50); // 等待50ms
    //     retries++;
    // }
    
    // if (!videoDetected) {
    //     Serial.println("AT7456未检测到视频信号!");
    //     return 1; // 初始化失败
    // }
    // // 根据检测到的制式设置VM0
    // uint8_t stat = at7456_read_addr(STAT);
    // if (stat & PAL_DETECT) {
    //     at7456_write_addr_data(VM0, 0x48); // PAL
    // } else {
    //     at7456_write_addr_data(VM0, 0x42); // NTSC
    // }

    


	// 修改背景设置
    // at7456_write_addr_data(VM1, BACKGND_0 | BLINK_TIME120);
    // // ✅ 新增：全局关闭背景驱动
    // for(int i=0; i<16; i++) {
    //     at7456_write_addr_data(RB0 + i, BLACK_LEVEL_0);
    // }
    // at7456_clearSRAM();
    Serial.println("AT7456 Initialized ");
    return 0;
}

void MyAT7456::at7456_clearSRAM(void) {
    at7456_write_addr_data(DMM, (1 << 2)); // 清屏标志
    delayMicroseconds(40);
}

void MyAT7456::at7456_OSD_on(void) {
    at7456_write_addr_data(VM0, 0x48); // 开启 OSD
    delayMicroseconds(10);
}

void MyAT7456::at7456_OSD_off(void) {
    at7456_write_addr_data(VM0, 0x40); // 关闭 OSD
    delayMicroseconds(30);
}
